# Email-Genie

./: Dockerfile  README.md  app.py  classification_self.ipynb  pyproject.toml  training_script.ipynb
