[tool.poetry]
name = "emailautomator"
version = "0.1.0"
description = "A streamlit app for email classification."
authors = ["Shrimay Shah <shahshrimay@iitgn.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
watchdog = "^5.0.3"
torch = "^2.4.1"
transformers = "^4.45.2"
scikit-learn = "^1.5.2"
dspy = "^2.5.6"
groq = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

